vlib/v/checker/tests/generics_field_struct_arr_err.out
vlib/v/checker/tests/generics_field_struct_arr_err.vv:20:6: error: `Callback` type is generic sumtype, must specify the generic type names, e.g. Callback[T], Callback[int]
   18 |     v T
   19 |     prev T
   20 |     cb2 []Callback
      |         ~~~~~~~~~~
   21 |     a int 
   22 | }
